--- a/app/views/items/exhibition.html.haml
+++ b/app/views/items/exhibition.html.haml
@@ -5,25 +5,23 @@
     =form_with(model: @item,local:true,class:"sell-form dropzone", id:"item-dropzone") do |form|
       = render 'layouts/error_messages', model: form.object
 
-      .exhibit__main__itemProfile__inputForm__sellImage
-        .exhibit__main__itemProfile__inputForm__sellImage__upload
-          .exhibit__main__itemProfile__inputForm__sellImage__upload__head
-            .notation 出品画像
-            .formRequire 必須
-          .exhibit__main__itemProfile__inputForm__sellImage__upload__attention
-            最大5枚までアップロードできます
-          .exhibit__main__itemProfile__inputForm__sellImage__upload__box
-            .prev-content
-            .label-content
-              %label{for: "item_images_attributes_0_url", class: "label-box", id: "label-box--0"}
-                %pre.label-box__text-visible クリックしてファイルをアップロード
-            .hidden-content
-              = form.fields_for :images,@item.images.new do |i|
-                = i.file_field :url, class: "hidden-field"
-                %input{class:"hidden-field", type: "file", name: "item[images_attributes][1][url]", id: "item_images_attributes_1_url" }
-                %input{class:"hidden-field", type: "file", name: "item[images_attributes][2][url]", id: "item_images_attributes_2_url" }
-                %input{class:"hidden-field", type: "file", name: "item[images_attributes][3][url]", id: "item_images_attributes_3_url" }
-                %input{class:"hidden-field", type: "file", name: "item[images_attributes][4][url]", id: "item_images_attributes_4_url" }
+      .exhibition__main__container
+        .exhibition__main__container__topic
+          %label 出品画像
+          %span 必須  
+        %p 最大5枚までアップロードできます
+        #filebox
+          .prev-content
+          .label-content
+            %label{for: "item_images_attributes_0_url", class: "label-box", id: "label-box--0"}
+              %pre.label-box__text-visible クリックしてファイルをアップロード
+          .hidden-content
+            = form.fields_for :images,@item.images.new do |i|
+              = i.file_field :url, class: "hidden-field"
+              %input{class:"hidden-field", type: "file", name: "item[images_attributes][1][url]", id: "item_images_attributes_1_url" }
+              %input{class:"hidden-field", type: "file", name: "item[images_attributes][2][url]", id: "item_images_attributes_2_url" }
+              %input{class:"hidden-field", type: "file", name: "item[images_attributes][3][url]", id: "item_images_attributes_3_url" }
+              %input{class:"hidden-field", type: "file", name: "item[images_attributes][4][url]", id: "item_images_attributes_4_url" }
       
       -# .exhibition__main__container
       -#   .exhibition__main__container__topic
