--- a/app/views/items/show.html.haml
+++ b/app/views/items/show.html.haml
@@ -81,10 +81,10 @@
             = @item.days_until_delivery
       .option__area
         .option__area__likeBtn
-          =icon("fas","star")
+          = icon("fas","star")
           = link_to "お気に入り0","#"
         .option__area__optionlBtn
-          =icon("fas","flag")
+          = icon("fas","flag")
           = link_to "不適切な商品の通報","#"
 
       -# ログインしていない場合は商品詳細画面に商品編集・削除・購入ボタンは表示されない
@@ -113,10 +113,10 @@
         = form.submit "コメントする", class:"comment__box__submitBtn"
     %ol.links
       %li.links__previous__page
-        =link_to "< 前の商品", "#"
+        = link_to "< 前の商品", "#"
       %li.links__next__page
-        =link_to "次の商品 >","#"
+        = link_to "次の商品 >","#"
     .related__items
-      =link_to "メンズをもっと見る","#"
+      = link_to "#{@item.category.parent.parent.name}をもっと見る","#"
       
-  =render "layouts/footer"
+  = render "layouts/footer"
