--- a/app/views/items/edit.html.haml
+++ b/app/views/items/edit.html.haml
@@ -49,13 +49,11 @@
         .new__main__container__topic
           %label カテゴリー
           %span 必須
+          %label#edit もう一度選び直してください
         .new__main__container__category
-        
-        = form.select :parent_id, @category_parent_array, {selected:@item.category.parent.parent.name}, { class: 'new__main__container__category__box--select', id: 'parent_category'}
-        .new__main__container__category
-          = form.select :child_id, options_for_select(@category_children_array.map{|b| [b.name, b.id, {data:{category: b.id}}]}, {prompt: "指定なし", selected: @item.category.parent.id}),{}, {class: 'new__main__container__category__box--select', id: 'child_category'}
-        .new__main__container__category
-          = form.select :category_id, options_for_select(@category_grandchildren_array.map{|b| [b.name, b.id, {data:{category: b.id}}]}, {prompt: "指定なし", selected: @item.category.id}),{}, {class: 'new__main__container__category__box--select', id: 'grandchild_category'}
+          .new__main__container__category__box
+            = form.collection_select :category_id, @category_parent_array, :id, :name, {prompt:"選択してください"}, {class: 'new__main__container__category__box--select', id: 'parent_category'}
+
 
         .new__main__container__topic
           %label 商品の状態
